# an-llm-experimentation

./: .gitignore  01-prior-art-quantum-inspired.md  03-complex-amplitudes-and-the-band.md  04-math-and-mechanisms.md  05-feasibility-verdict.md  06-prototype-plan.md  07-pattern-as-token-the-objective.md  08-combinatorial-capacity.md  09-hardware-requirements.md  10-frequency-salience-glow.md  AGENTS.md  CLAUDE.md  Cargo.toml  GROUND-UP-CONSTRAINTS.md  README.md  REVIEW-LOG.md  WHITEPAPER.md  gates.toml  references.md  rust-toolchain.toml
.github/workflows/: verify.yml
docs/: 00-hypothesis-decomposed.md  02-why-classical-not-a-quantum-computer.md  05-feasibility-verdict.md  06-prototype-plan.md  07-pattern-as-token-the-objective.md  11-vsa-positioning-and-reframe.md  PDF-BUILD.md
implementation/: 00-stack-and-principles.md  BUILD-LOG.md  METRICS-AND-GATES.md  PHASE-1-pattern-feasibility.md  PHASE-2-sparse-attractor-memory.md  PHASE-3-glow-confidence.md  PHASE-4-complex-wave.md  PHASE-5-unitary-dynamics.md  PHASE-6-generation-multimodal.md  PRIOR-ART-AND-REUSE.md  README.md  VERIFICATION.md
implementation/tests/: PHASE-0.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  README.md
qilm-core/: Cargo.toml
qilm-core/src/: autodiff.rs  bind.rs  born.rs  complex.rs  encoder.rs  hopfield.rs  lib.rs  unitary.rs
qilm-data/: Cargo.toml
qilm-data/src/: lib.rs  splits.rs  synth.rs
qilm-data/tests/: kat_synth_entropy.rs
qilm-oracle/: Cargo.toml
qilm-oracle/src/: gradcheck.rs  lib.rs
qilm-oracle/tests/: gradcheck_autodiff_add.rs  gradcheck_autodiff_born_logits.rs  gradcheck_autodiff_cross_entropy.rs  gradcheck_autodiff_linear.rs  gradcheck_autodiff_lossops.rs  gradcheck_autodiff_mlp_e2e.rs  gradcheck_autodiff_tanh.rs  gradcheck_born.rs  gradcheck_complex.rs  gradcheck_givens.rs  kat_bind.rs  kat_born.rs  kat_complex.rs  kat_hopfield.rs  kat_unitary.rs  prop_autodiff_sum_squares.rs
qilm-train/: Cargo.toml
qilm-train/src/: gate.rs  lib.rs  loss.rs  model_pattern.rs  model_token.rs  provenance.rs  report.rs  testkit.rs  train.rs
qilm-train/src/metrics/: bpb.rs  collapse.rs  mod.rs
qilm-train/tests/: collapse_kat.rs  gate_eval.rs  gradcheck_pattern.rs  kae_markov.rs  loss_tests.rs  nc_bpb.rs  nc_collapse.rs  negative_controls.rs  phase_report_tests.rs  provenance_tests.rs  report_harness.rs  test_frozen_gates.rs
reports/: PHASE-0.md  PHASE-1.md  phase_spec.toml
results/: RESULTS.json  RESULTS.md
scripts/: lint_canaries.sh
