# CCR (Convergent Concept Representations) — Rust workspace.
# Virtual manifest. Each crate is filled per implementation/tests/PHASE-*.md.
# CPU is the source of truth (C3/C4); no libtorch/CUDA for headline numbers.
#
# MINIMAL DEPENDENCY POLICY (implementation/PRIOR-ART-AND-REUSE.md, AGENTS.md rule 12):
# every crate pins its deps here so the workspace uses ONE version of each — a reviewer
# must survive `cargo tree`. No DL framework, no FFT crate (hand-rolled DFT), no rand_distr.
[workspace]
resolver = "2"
members = ["qilm-core", "qilm-oracle", "qilm-data", "qilm-train"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
rand = "0.10"                                        # seedable RNG (paired with rand_chacha)
rand_chacha = "0.10"                                 # ChaCha20Rng: algorithm-stable determinism (C4)
serde = { version = "1", features = ["derive"] }     # run artifacts / truth.json
serde_json = "1"
sha2 = "0.11"                                         # provenance + split hashing
toml = "1"                                            # read the frozen gates.toml config
# dev-only
proptest = "1"
approx = "0.5"
tempfile = "3"

[profile.release]
debug = true          # keep symbols for cargo-mutants / profiling
