[package]
name = "qilm-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qilm-core = { path = "../qilm-core" }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
