[package]
name = "qilm-train"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qilm-core = { path = "../qilm-core" }
qilm-data = { path = "../qilm-data" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
toml = "1.1.3"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "report"
path = "src/bin/report.rs"
