[package]
name = "qilm-train"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qilm-core = { path = "../qilm-core" }
qilm-data = { path = "../qilm-data" }
qilm-oracle = { version = "0.1.0", path = "../qilm-oracle" }
rand = "0.10.2"
rand_chacha = "0.10.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tempfile = "3.27.0"
toml = "1.1.3"

[[bin]]
name = "report"
path = "src/bin/report.rs"

[[bin]]
name = "gate"
path = "src/bin/gate.rs"

[[bin]]
name = "selfcheck"
path = "src/bin/selfcheck.rs"
