[package]
name = "qilm-train"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qilm-core = { path = "../qilm-core" }
qilm-data = { path = "../qilm-data" }
qilm-oracle = { path = "../qilm-oracle" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }   # atomic regen-and-diff in `report --check` (CI path)

[dev-dependencies]
proptest = { workspace = true }

[[bin]]
name = "report"
path = "src/bin/report.rs"

[[bin]]
name = "gate"
path = "src/bin/gate.rs"

[[bin]]
name = "selfcheck"
path = "src/bin/selfcheck.rs"

[[bin]]
name = "g0"
path = "src/bin/g0.rs"
